--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "next-seo": "^6.6.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
@@ -25,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^9.14.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
