--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
-    "next": "latest",
+    "next": "^15.4.7",
     "next-seo": "^6.6.0",
     "react": "^18",
     "react-dom": "^18",
